# unshell-nodes-rs

./: Cargo.toml  LICENSE  README.md  THINGS.md
nodes/: Cargo.toml
nodes/src/endpoint/: mod.rs
nodes/ui/: structs.slint
nodes/unshell-rs-lib/src/nodes/: node_container.rs
payload/: Cargo.toml
payload/src/: execute.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
src/: gui.rs  lib.rs  main.rs  packets.rs  payload.rs
src/client/: cli.rs  client.rs  gui.rs  mod.rs  node_cli.rs
src/endpoint/: endpoint.rs
src/layers/: base64.rs  mod.rs
src/listeners/: mod.rs  server.rs
src/packets/: mod.rs
src/server/: config.rs  mod.rs  server.rs
sysintercept/: Cargo.toml
sysintercept/src/: lib.rs  syscalls.rs
tables/: Cargo.toml
tables/src/: app.rs  main.rs
tables/src/tabs/: env_vars.rs  mod.rs  tab1.rs  tab2.rs  tab3.rs
ui/: app-window.slint  components.slint  page.slint  structs.slint
ui/pages/: clients.slint  dashboard.slint  listeners.slint  tools.slint
unshell-rs-lib/: Cargo.toml
unshell-rs-lib/src/: lib.rs  packets.rs
unshell-rs-lib/src/config/: campaign.rs  layers.rs  listeners.rs  mod.rs
unshell-rs-lib/src/connection/: listener.rs  mod.rs  node-test  node.rs  packets.rs
unshell-rs-lib/src/layers/: base64.rs  builder.rs  handshake.rs  mod.rs
unshell-rs-lib/src/listeners/: client.rs  mod.rs  server.rs
unshell-rs-lib/src/networkers/: mod.rs  server.rs  tcp.rs  traits.rs
unshell-rs-lib/src/nodes/: listener.rs  mod.rs  node.rs  node_container.rs  packets.rs  stream.rs
unshell-rs-lib/src/packets/: mod.rs  sysinfo.rs
