[package]
name = "unshell-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
clap = { version = "4.5.39", features = ["derive"] }
crossbeam-channel = "0.5.15"
lazy_static = "1.5.0"
log = "0.4.27"
portable-pty = "0.9.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
term_size = "0.3.2"
# slint = "1.11.0"
unshell-rs-lib = { path = "./unshell-rs-lib" }
uuid = { version = "1.17.0", features = ["v4"] }


# [build-dependencies]
# slint-build = "1.11.0"
